tests/invalid/Lifetime_Invalid_4.whiley
method foo() -> &*:int:
    return this:new 1

public export method test():
    foo()
